# patent-corpus-analytics

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: output.json
src/patent_analytics/: __init__.py  aggregate.py  classify.py  cli.py  extract.py  generate.py  pipeline.py  visualize.py
tests/: test_aggregate.py  test_classify.py  test_extract.py
